--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -580,7 +580,9 @@ a {
 .bypostauthor {
   display: block; }
 
-.blog .content-area {
+.blog .content-area,
+.page .content-area,
+.single .content-area {
   width: 70%;
   padding: 3rem 3rem 0 0; }
 
@@ -618,7 +620,6 @@ a {
     font-size: 1.3rem; }
 
 .hero-about {
-  width: 100%;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
@@ -639,7 +640,7 @@ a {
     text-align: center;
     color: #2f1339; }
 
-.page-id-25 .content-area {
+.page .content-area {
   width: 70%;
   padding: 3rem 3rem 0 0; }
 
@@ -707,7 +708,8 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-.home .site-content {
+.home .site-content,
+.page-template-page-about .site-content {
   width: 100%;
   margin: 0;
   padding: 0; }
